--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
                 <div class="section5-link">
                     <ul class="link-box">
                         <li class="link-box__item"><a href="#" class="link-box__link">Software Product Engineering</a></li>
-                        <li class="link-box__item"><a href="#" class="link-box__link">Data & Artificial Intelligence</a></li>
-                        <li class="link-box__item"><a href="#" class="link-box__link tablet--margin-right">Cloud & Infrastructure</a></li>
-                        <li class="link-box__item"><a href="#" class="link-box__link tablet--d-none">Quality Assurance & Design</a></li>
+                        <li class="link-box__item"><a href="#" class="link-box__link mobile--margin-right">Data & Artificial Intelligence</a></li>
+                        <li class="link-box__item"><a href="#" class="link-box__link tablet--margin-right mobile--d-none">Cloud & Infrastructure</a></li>
+                        <li class="link-box__item"><a href="#" class="link-box__link tablet--d-none mobile--d-none">Quality Assurance & Design</a></li>
                     </ul>
                 </div>
                 <div class="section5-container">
