--- a/Why CODEPRIDE.html
+++ b/Why CODEPRIDE.html
@@ -140,6 +140,60 @@
                     </div>
                 </div>
             </section>
+            <section class="section3">
+                <p class="section3__sub-title">Only the top 2 percent of applicants get accepted.</p>
+                <h2 class="title section3__title">Here’s how we test</h2>
+                <p class="section3__text">Every applicant goes through extensive vetting, which means you’re guaranteed quality work from day 1.</p>
+                <div class="section3-container">
+                    <div class="section3-box">
+                        <div class="section3-contant">
+                            <p class="section3-contant__number">01</p>
+                            <h3 class="section3-contant__title">Self-assessment quiz</h3>
+                            <img src="./img/4.svg" alt="accets" class="section3-contant__img">
+                            <p class="section3-contant__text">We get thousands of applicants each month. The first step our applicants take is to complete a quiz where they answer questions about their background and professional experience.</p>
+                        </div>
+
+                        <div class="section3-contant">
+                            <p class="section3-contant__number">03</p>
+                            <h3 class="section3-contant__title">Code test</h3>
+                            <img src="./img/20.svg" alt="accets" class="section3-contant__img">
+                            <p class="section3-contant__text">Promising applicants are tasked with a challenging code test, where they are using the language and framework they want to work with at CODEPRIDE.</p>
+                        </div>
+
+                        <div class="section3-contant">
+                            <p class="section3-contant__number">05</p>
+                            <h3 class="section3-contant__title">Final review</h3>
+                            <img src="./img/2.svg" alt="accets" class="section3-contant__img">
+                            <p class="section3-contant__text">Our team performs a full review of each stage of the applicant’s vetting process to ensure consistency.</p>
+                        </div>
+                    </div>
+
+
+
+                    <div class="section3-box">
+                        <div class="section3-contant section3-contant--margin">
+                            <p class="section3-contant__number">02</p>
+                            <h3 class="section3-contant__title">Technical quiz and screening interview</h3>
+                            <img src="./img/8.svg" alt="accets" class="section3-contant__img">
+                            <p class="section3-contant__text">Applicants take a technical quiz, which helps us have a more fact-based discussion in our screening interview. Our recruiters assess the applicant’s professional experience, English proficiency and soft skills.</p>
+                        </div>
+
+                        <div class="section3-contant">
+                            <p class="section3-contant__number">04</p>
+                            <h3 class="section3-contant__title">Technical interview</h3>
+                            <img src="./img/7.svg" alt="accets" class="section3-contant__img">
+                            <p class="section3-contant__text">Our engineering managers perform an extensive evaluation of the applicant's technical and problem-solving skills during a 1-hour interview.</p>
+                        </div>
+
+                        <div class="section3-contant">
+                            <p class="section3-contant__number">06</p>
+                            <h3 class="section3-contant__title">Onboarding & ongoing review</h3>
+                            <img src="./img/16.svg" alt="accets" class="section3-contant__img">
+                            <p class="section3-contant__text">Our community managers chat with our newcomers to give them a warm welcome and discuss practicalities. We also have frequent reviews of all of our developers to ensure high-quality density in our network.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 </body>
