desctop-why-codepride-finish

--- a/Why CODEPRIDE.html
+++ b/Why CODEPRIDE.html
@@ -194,7 +194,99 @@
                     </div>
                 </div>
             </section>
+            <section class="section4">
+                <h2 class="section4__title title">Three steps to your perfect developer</h2>
+                <div class="section4-container">
+                    <div class="section4-box">
+                        <img src="./img/messages-2.svg" alt="messages" class="section4-box__img">
+                        <div class="section4-box__textbox">
+                            <h3 class="section4-box__textbox-title">Tell us about your needs</h3>
+                            <p class="section4-box__textbox-text section4-text--min-width">Talk to a technical manager about your requirements and goals for your product or project.</p>
+                        </div>
+                    </div>
+
+                    <div class="section4-box">
+                        <img src="./img/heart-tick.svg" alt="heart" class="section4-box__img">
+                        <div class="section4-box__textbox">
+                            <h3 class="section4-box__textbox-title">Get matched to the perfect developer</h3>
+                            <p class="section4-box__textbox-text">Within days, a hand-picked and fully-vetted developer will be presented to you.</p>
+                        </div>
+                    </div>
+
+                    <div class="section4-box">
+                        <img src="./img/crown.svg" alt="crown" class="section4-box__img">
+                        <div class="section4-box__textbox">
+                            <h3 class="section4-box__textbox-title">Begin working together(risk-free)</h3>
+                            <p class="section4-box__textbox-text">Work begins. Completely risk-free for a week. You only pay if happy.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section5">
+                <p class="section5__sub-title">CODEPRIDE</p>
+                <h2 class="section5__title title">Build your dream team today</h2>
+                <p class="section5__text">Tired of job postings, endless interviews and hiring headaches? Discover talented developers, tailored to <br> you and accelerate your business now.</p>
+                <button class="btn section5__btn">find a developer</button>
+            </section>
         </main>
+        <footer class="footer">
+            <div class="footer-container">
+                <div class="footer-box">
+                    <div class="logo">
+                        <img src="./img/Logo-white.svg" alt="logo" class="logo__img">
+                    </div>
+                    <a href="tel:+5167776758" class="footer-box__tell">+516 777 6758</a>
+                    <a href="#" type ="email" class="footer-box__email">codepride@example.com</a>
+                    <p class="footer-box__city">City, Country, <br> Example street</p>
+                    <div class="footer-box__social">
+                        <img src="./img/Social.svg" alt="instagram" class="footer-box__social-instagram">
+                        <img src="./img/Social (1).svg" alt="linkedin" class="footer-box__social-linkedin">
+                        <img src="./img/Social (2).svg" alt="facebook" class="footer-box__social-facebook">
+                    </div>
+                </div>
+                <div class="footer-box2">
+                    <div class="footer-contentbox">
+                        <div class="footer-textbox">
+                            <h3 class="footer-textbox__title">Why CODEPRIDE</h3>
+                            <div class="footer-textbox__contain">
+                                <a href="#" class="footer-textbox__contain-text">How it works</a>
+                                <a href="#" class="footer-textbox__contain-text">Vetting process</a>
+                                <a href="#" class="footer-textbox__contain-text">Benefits</a>
+                            </div>
+                        </div>
+                        <div class="footer-textbox">
+                            <h3 class="footer-textbox__title">Pricing</h3>
+                            <div class="footer-textbox__contain">
+                                <a href="#" class="footer-textbox__contain-text">Plans</a>
+                                <a href="#" class="footer-textbox__contain-text">CODEPRIDE vs alternatives</a>
+                                <a href="#" class="footer-textbox__contain-text">FAQs</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer-contentbox2">
+                        <div class="footer-textbox">
+                            <h3 class="footer-textbox__title">Company</h3>
+                            <div class="footer-textbox__contain">
+                                <a href="#" class="footer-textbox__contain-text">About us</a>
+                                <a href="#" class="footer-textbox__contain-text">Our team</a>
+                                <a href="#" class="footer-textbox__contain-text">Our values</a>
+                            </div>
+                        </div>
+                        <div class="footer-textbox">
+                            <h3 class="footer-textbox__title">Careers</h3>
+                            <div class="footer-textbox__contain">
+                                <a href="#" class="footer-textbox__contain-text">Opportunities</a>
+                                <a href="#" class="footer-textbox__contain-text">Job openings</a>
+                                <a href="#" class="footer-textbox__contain-text">Recruiting team</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-container2">
+                <p class="footer-container2__text">Privacy Policy</p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
