--- a/about us.html
+++ b/about us.html
@@ -45,6 +45,19 @@
                     </div>
                 </div>
             </section>
+            <section class="section3">
+                <p class="section3__sub-title">CODEPRIDE began with a simple mission...</p>
+                <h2 class="section3__title">To connect top developers <span class="section3__title-text">around the world</span> with opportunities they deserve</h2>
+                <div class="section3-container">
+                    <p class="section3-container__text">
+                        Building tech teams is a risky business, consuming huge amounts of time and resources. The hiring process can easily go wrong, spelling trouble for scaling companies. Viktor Jarnheimer, Proxify's co-founder and CEO observed this firsthand after selling his previous startup in Sweden.
+                        “Max”, a wonderfully talented and experienced developer based in Eastern Europe, immediately had his contract terminated under the new management. He was replaced by two Swedish developers, who had no experience with the programming language. Worse still, they cost eight times more than Max did. Viktor couldn’t believe that Max’s expertise was sidelined in favour of expensive developers with no relevant experience, just because they were local.
+                        Since 2018, we have evolved our vetting process, handpicking remote tech experts and matching them to opportunities that perfectly suit their skills.
+                        We believe that top companies deserve access to the best talent, and the best talent deserves access to top companies. Period.
+                    </p>
+                    <img src="./img/10.png" alt="bigman" class="section3-container__img">
+                </div>
+            </section>
         </main>
         <footer class="footer"></footer>
     </div>
