--- a/about us.html
+++ b/about us.html
@@ -58,8 +58,137 @@
                     <img src="./img/10.png" alt="bigman" class="section3-container__img">
                 </div>
             </section>
+            <section class="section4">
+                <div class="section4-container">
+                    <div class="section4-textbox">
+                        <h3 class="section4-textbox__title">Our team</h3>
+                        <p class="section4-textbox__text">We’re a fun-loving crew blending elite technical expertise with a genuine human touch.</p>
+                    </div>
+                    <div class="section4-box">
+                        <div class="section4-box__contain">
+                            <img src="./img/🌏.svg" alt="planet" class="section4-box__contain-img">
+                            <p class="section4-box__contain-text">Worldwide</p>
+                        </div>
+                        <div class="section4-box__contain">
+                            <img src="./img/😎.svg" alt="glass-smail" class="section4-box__contain-img">
+                            <p class="section4-box__contain-text">Distributed teams</p>
+                        </div>
+                        <div class="section4-box__contain">
+                            <img src="./img/😜.svg" alt="smail" class="section4-box__contain-img">
+                            <p class="section4-box__contain-text">Positive attitude</p>
+                        </div>
+                        <div class="section4-box__contain">
+                            <img src="./img/🙏.svg" alt="hands" class="section4-box__contain-img">
+                            <p class="section4-box__contain-text">Relationships matter</p>
+                        </div>
+                        <div class="section4-box__contain">
+                            <img src="./img/🚀.svg" alt="rocket" class="section4-box__contain-img">
+                            <p class="section4-box__contain-text">Growth oriented</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="section4-container">
+                    <div class="section4-textbox">
+                        <h3 class="section4-textbox__title">Our values</h3>
+                        <p class="section4-textbox__text">We live and breathe these values, everyday. They guide everything we do.</p>
+                    </div>
+                    <div class="section4-box2">
+                        <div class="section4-box2__contain">
+                            <img src="./img/timer-start.svg" alt="time" class="section4-box2__contain-img">
+                            <div class="section4-box2__contain-textbox">
+                                <p class="section4-box2__contain-textbox-title">Speed</p>
+                                <p class="section4-box2__contain-textbox-text">We seize opportunities, and embrace our mistakes as a key ingredient of innovation.</p>
+                            </div>
+                        </div>
+                        <div class="section4-box2__contain">
+                            <img src="./img/share.svg" alt="share" class="section4-box2__contain-img">
+                            <div class="section4-box2__contain-textbox">
+                                <p class="section4-box2__contain-textbox-title">Impact</p>
+                                <p class="section4-box2__contain-textbox-text">We are driven to create positive change together, fuelled by an uncompromising dedication to our.</p>
+                            </div>
+                        </div>
+                        <div class="section4-box2__contain">
+                            <img src="./img/medal-star.svg" alt="medal" class="section4-box2__contain-img">
+                            <div class="section4-box2__contain-textbox">
+                                <p class="section4-box2__contain-textbox-title">Quality</p>
+                                <p class="section4-box2__contain-textbox-text">We are always meticulous and dedicated to data. We celebrate excellence everyday.</p>
+                            </div>
+                        </div>
+                        <div class="section4-box2__contain">
+                            <img src="./img/emoji-normal.svg" alt="emoji" class="section4-box2__contain-img">
+                            <div class="section4-box2__contain-textbox">
+                                <p class="section4-box2__contain-textbox-title">Personal</p>
+                                <p class="section4-box2__contain-textbox-text">Empathy is our north star. We believe that anything is possible, with a little help from our friends.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section5">
+                <p class="section5__sub-title">CODEPRIDE</p>
+                <h2 class="section5__title title">Build your dream team today</h2>
+                <p class="section5__text">Tired of job postings, endless interviews and hiring headaches? Discover talented developers, tailored to <br> you and accelerate your business now.</p>
+                <button class="btn section5__btn">find a developer</button>
+            </section>
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="footer-container">
+                <div class="footer-box">
+                    <div class="logo">
+                        <img src="./img/Logo-white.svg" alt="logo" class="logo__img">
+                    </div>
+                    <a href="tel:+5167776758" class="footer-box__tell">+516 777 6758</a>
+                    <a href="#" type ="email" class="footer-box__email">codepride@example.com</a>
+                    <p class="footer-box__city">City, Country, <br> Example street</p>
+                    <div class="footer-box__social">
+                        <img src="./img/Social.svg" alt="instagram" class="footer-box__social-instagram">
+                        <img src="./img/Social (1).svg" alt="linkedin" class="footer-box__social-linkedin">
+                        <img src="./img/Social (2).svg" alt="facebook" class="footer-box__social-facebook">
+                    </div>
+                </div>
+                <div class="footer-box2">
+                    <div class="footer-contentbox">
+                        <div class="footer-textbox">
+                            <h3 class="footer-textbox__title">Why CODEPRIDE</h3>
+                            <div class="footer-textbox__contain">
+                                <a href="#" class="footer-textbox__contain-text">How it works</a>
+                                <a href="#" class="footer-textbox__contain-text">Vetting process</a>
+                                <a href="#" class="footer-textbox__contain-text">Benefits</a>
+                            </div>
+                        </div>
+                        <div class="footer-textbox">
+                            <h3 class="footer-textbox__title">Pricing</h3>
+                            <div class="footer-textbox__contain">
+                                <a href="#" class="footer-textbox__contain-text">Plans</a>
+                                <a href="#" class="footer-textbox__contain-text">CODEPRIDE vs alternatives</a>
+                                <a href="#" class="footer-textbox__contain-text">FAQs</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer-contentbox2">
+                        <div class="footer-textbox">
+                            <h3 class="footer-textbox__title">Company</h3>
+                            <div class="footer-textbox__contain">
+                                <a href="#" class="footer-textbox__contain-text">About us</a>
+                                <a href="#" class="footer-textbox__contain-text">Our team</a>
+                                <a href="#" class="footer-textbox__contain-text">Our values</a>
+                            </div>
+                        </div>
+                        <div class="footer-textbox">
+                            <h3 class="footer-textbox__title">Careers</h3>
+                            <div class="footer-textbox__contain">
+                                <a href="#" class="footer-textbox__contain-text">Opportunities</a>
+                                <a href="#" class="footer-textbox__contain-text">Job openings</a>
+                                <a href="#" class="footer-textbox__contain-text">Recruiting team</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-container2">
+                <p class="footer-container2__text">Privacy Policy</p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
