--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="./Why CODEPRIDE.html" class="nav__link">Why CODEPRIDE</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Pricing</a></li>
+                    <li class="nav__item"><a href="./pricing.html" class="nav__link">Pricing</a></li>
                     <li class="nav__item"><a href="./about us.html" class="nav__link">About us</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">Careers</a></li>
                 </ul>
