careers-desctop-finish

--- a/Why CODEPRIDE.html
+++ b/Why CODEPRIDE.html
@@ -13,14 +13,14 @@
     <div class="wrapper">
         <header class="header">
             <div class="logo">
-                <img src="./img/Logo.svg" alt="logo" class="logo__img">
+                <a href="./index.html" class="loog__link"><img src="./img/Logo.svg" alt="logo" class="logo__img"></a>
             </div>
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="./Why CODEPRIDE.html" class="nav__link">Why CODEPRIDE</a></li>
                     <li class="nav__item"><a href="./pricing.html" class="nav__link">Pricing</a></li>
                     <li class="nav__item"><a href="./about us.html" class="nav__link">About us</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Careers</a></li>
+                    <li class="nav__item"><a href="./careers.html" class="nav__link">Careers</a></li>
                 </ul>
             </nav>
             <img src="./img/menu.svg" alt="burger-menu" class="burger-menu">
