--- a/about us.html
+++ b/about us.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <header class="header">
             <div class="logo">
-                <img src="./img/Logo.svg" alt="logo" class="logo__img">
+                <a href="./index.html" class="loog__link"><img src="./img/Logo.svg" alt="logo" class="logo__img"></a>
             </div>
             <nav class="nav">
                 <ul class="nav__list">
